Adds troubleshooting info to test runs (#14)
* Adds troubleshooting info to test runs

* println instead of log/debug

* Removes test case with 10MB streamed response

* Adds GC logging flags

* Adds max memory log

* Adds more GC logging flags

* Specifies gc log file location

* Fixes log-memory-info defn

* Makes logging go to stdout for travis